# agentcore-book

./: .env.example  .gitignore  LICENSE  README.md
.claude/: CLAUDE.md  settings.local.json
appendix/: README.md
chapter1/: 01_converse.py  02_converse_stream.py  03_tool_use.py  README.md  pyproject.toml
chapter10/: 02_browser.py  README.md  pyproject.toml
chapter11/: README.md
chapter12/: 02_on_demand.py  README.md  pyproject.toml
chapter13/: README.md  handson-memo.txt
chapter13/bookchecker/agent/app/BookChecker/: Dockerfile  calendar_tool.py  main.py  pyproject.toml
chapter14/: 03-mcp-tool.py  README.md  main.py  pyproject.toml
chapter15/: .env.example  README.md  pyproject.toml
chapter3/: 01_simple.py  02_agent.py  03-1_invoke.py  03-2_invoke.py  03-3_invoke.py  04-1_model.py  04-2_model.py  04-3_model.py  05_prompt.py  06_tools.py  07_tool_executor.py  08_session.py  09_hook.py  10_conversation.py  11_structured_output.py  12_agents_as_tools.py  13_workflow.py  14_graph.py  15_swarm.py  16-1_a2a_server.py  16-2_a2a_card.py  16-3_a2a_client.py  17_tracing.py  18_evals.py  README.md  pyproject.toml
chapter3/handson/: main.py  pyproject.toml
chapter4/: README.md  main.py  pyproject.toml
chapter4/hooks/: tool_logging_hook.py
chapter5/: 01_streaming.py  02_runtime.ts  03_invoke_streaming.py  04_async.py  05_mcp_server.py  06_mcp_client.py  07_a2a_server.py  08_a2a_client.py  README.md  pyproject.toml
chapter5/handson/: invoke.py  pyproject.toml
chapter5/handson/app/MyAgent/: main.py  pyproject.toml
chapter6/: 01_stm.py  02_ltm.py  03_sdk.py  04_strands.py  README.md  pyproject.toml
chapter7/: 01_outbound.py  02_callback_server.py  README.md  pyproject.toml
chapter8/: 01_mcp_client.py  README.md  pyproject.toml
chapter9/: 03_forbid_role.cedar  (+4 more)
(+25 files in other folders)
