[project]
name = "chapter3-snippets"
version = "0.1.0"
description = "Chapter 3 Strands Agents snippet verification"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "strands-agents-tools==0.5.1",
    "strands-agents[openai,a2a]==1.38.0",
    "strands-agents-evals==0.1.15",
    "boto3[crt]==1.42.96"
]
