[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-checker"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro == 0.15.0",
    "bedrock-agentcore == 1.3.1",
    "boto3[crt] == 1.42.54",
    "mcp == 1.26.0",
    "strands-agents == 1.27.0",
    "strands-agents-tools == 0.5.0",
    "nest-asyncio == 1.6.0",
    "playwright == 1.58.0",
    "requests == 2.33.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
